@@ -23,13 +23,13 @@ my $prereqs  = {
     'JSON::MaybeXS' => '1.003',
     'Module::Pluggable' => '5.1',
     'Module::Runtime' => '0.014',
-    'Moo' => '2.000001',
+    'Moo' => '2.001001',
     'Ref::Util' => '0.203',
     'Sub::Install' => '0.928',
     'Subclass::Of' => '0.003',
     'Try::Tiny' => '0.22',
     'Type::Tiny' => '1.000002',
-    'Unexpected' => 'v0.39.0',
+    'Unexpected' => 'v1.0.3',
     'boolean' => '0.45',
     'namespace::autoclean' => '0.26',
     'namespace::clean' => '0.25',
