@@ -1,3 +1,6 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "Cache::FastMmap" => "1.40";
 requires "Class::Null" => "2.110730";
 requires "File::Path" => "2.09";
@@ -6,13 +9,13 @@ requires "Hash::Merge" => "0.200";
 requires "JSON::MaybeXS" => "1.003";
 requires "Module::Pluggable" => "5.1";
 requires "Module::Runtime" => "0.014";
-requires "Moo" => "2.000001";
+requires "Moo" => "2.001001";
 requires "Ref::Util" => "0.203";
 requires "Sub::Install" => "0.928";
 requires "Subclass::Of" => "0.003";
 requires "Try::Tiny" => "0.22";
 requires "Type::Tiny" => "1.000002";
-requires "Unexpected" => "v0.39.0";
+requires "Unexpected" => "v1.0.3";
 requires "boolean" => "0.45";
 requires "namespace::autoclean" => "0.26";
 requires "namespace::clean" => "0.25";
